<resources>
    <string name="app_name">Android LAbs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="toast_message">Here is more information</string>
    <string name="hint_name">Type here</string>
    <string name="click_here">Click here</string>
    <string name="check_name">Check this out</string>
    <string name="Profile">Canadian Profile</string>
    <string name="email">Enter your Email Address</string>
    <string name="here">Type your Email</string>
    <string name="pass">Type your password</string>
    <string name="chats">Go to Chat</string>
    <string name="send">send</string>
    <string name="receive">receive</string>
<string name="open">Open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
