<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_column="0"
        android:text="Look At my GUI"
        android:textSize="30dp" />

    <Button

        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:text="@string/click_here" />

    <CheckBox

        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"

        android:text="@string/check_name"></CheckBox>

    <ImageButton

        android:id="@+id/imagebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"

        android:layout_column="0"
        android:src = "@drawable/flag" />
    <Switch

        android:id="@+id/switchbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"

        android:layout_column="1"
        android:text= "Switch ON/OFF"
        android:textSize="10dp"

        />

    <EditText
        android:id="@+id/edit"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/hint_name"/>

</GridLayout>